# utilc-file

./: CMakeLists.txt  INSTALL.md  README.md  examplefile.txt
example/: CMakeLists.txt  utilc-file-example.c
include/: utilc-file.h
src/: CMakeLists.txt  utilc-file.c
tests/: CMakeLists.txt  test-utilc-file.c
