enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} utilc-file m pthread rt subunit)
include_directories(. ../include)
add_executable(test-utilc-file test-utilc-file.c)
target_link_libraries(test-utilc-file ${LIBS})
add_test(test-utilc-file ${CMAKE_CURRENT_BINARY_DIR}/test-utilc-file)
